--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/abstracts/main';
+// @import "primeng/resources/themes/lara-light-blue/theme.css";
+// @import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+body {
+  box-sizing: border-box;
+  overflow-x: hidden;
+  font-family: 'Cairo', sans-serif;
+  direction: rtl;
+  background: #F1F1F1;
+  text-align: right;
+}
+
+.rounded-modal {
+  .modal-content {
+    border-radius: 20px;
+  }
+}
+
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
